<resources>
    <string name="app_name">TheMovie</string>

    <string name="to_movie_details">К описанию фильма</string>

    <string name="back">Back</string>
    <string name="rating">13+</string>
    <string name="title">Avengers: End Game</string>
    <string name="tag">Action, Adventure, Fantasy</string>
    <string name="reviews">125 reviews</string>

    <string name="storyline">Storyline</string>
    <string name="description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\&apos; actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="downey">Robert Downey Jr.</string>
    <string name="evans">Chris Evans</string>
    <string name="ruffalo">Mark Ruffalo</string>
    <string name="hemsworth">Chris Hemsworth</string>
</resources>